fixed var list horizontal scroll when open 2.0

--- a/Styles/navbar.css
+++ b/Styles/navbar.css
@@ -147,6 +147,6 @@
     border-collapse: collapse;
     padding: 0.3rem;
     text-align: center;
-    font-size: 0.67rem;
+    font-size: 0.63rem;
   }
 }
